--- a/ProjectCRUD/ProjectCRUD/src/main/resources/application.properties
+++ b/ProjectCRUD/ProjectCRUD/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+#Security
+spring.security.user.name=user
+spring.security.user.password=user
+logging.level.org.springframework.security=DEBUG
