--- a/ProjectCRUD/ProjectCRUD/src/main/resources/application.properties
+++ b/ProjectCRUD/ProjectCRUD/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.security.user.name=user
 spring.security.user.password=user
 logging.level.org.springframework.security=DEBUG
+
+spring.security.user.roles=ADMIN
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
